Colaboratory kullanılarak oluşturuldu

--- a/PizzaHouse.ipynb
+++ b/PizzaHouse.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7BX0t8cYhNyvQQeOf5HFV",
+      "authorship_tag": "ABX9TyMGegHxiwuL45PLmhG3H/S8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -271,21 +271,12 @@
     {
       "cell_type": "code",
       "source": [
-        "1import csv\n",
+        "import csv\n",
         "from datetime import datetime\n",
         "\n",
         "def main():\n",
         "    print(\"-----------Pizzacıya Hoşgeldiniz-----------\")\n",
         "    print(\"------Aşağıdaki menüden pizza seçiniz------\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Menu.txt dosyasının oluşturulması ve içerik eklenmesi.\n",
-        "# w(Write)-yazma\n",
-        "#1. komut sonrası çalıştırıldığın da eğer dosya yok ise oluturulur ve yazmak için açılır\n",
-        "#1 defa çalıştırıldı ve dosya oluşturuldu\n",
-        "#menu = open(\"Menu.txt\",\"w\")\n",
-        "#menu.write(\"* Lütfen Bir Pizza Tabanı Seçiniz:\\n1: Klasik\\n2: Margarita\\n3: TürkPizza\\n4: Sade Pizza\\n* ve seçeceğiniz sos:\\n11: Zeytin\\n12: Mantarlar\\n13: Keçi Peyniri\\n14: Et\\n15: Soğan\\n16: Mısır\\n\")\n",
         "\n",
         "    with open(\"Menu.txt\", \"r\") as f:\n",
         "        menu = f.read()\n",
