Colaboratory kullanılarak oluşturuldu

--- a/PizzaHouse.ipynb
+++ b/PizzaHouse.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGegHxiwuL45PLmhG3H/S8",
+      "authorship_tag": "ABX9TyMKeGJhmtZ6wnuveUl6kyw2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,12 +49,12 @@
     {
       "cell_type": "code",
       "source": [
-        "import datetime"
+        "from datetime import datetime"
       ],
       "metadata": {
         "id": "RCDL-BnQbzej"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -323,7 +323,6 @@
         "            continue\n",
         "\n",
         "        sos = number_list_sos[sos_sec]\n",
-        "        #pizza = sos(pizza)\n",
         "        # Seçilen sosun önceden seçilip seçilmediğinin kontrol edilmesi\n",
         "        if sos.__name__ not in secilen_sos_listesi:\n",
         "            secilen_sos_listesi.append(sos.__name__)\n",
@@ -375,9 +374,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aGpahEB_7rBb",
-        "outputId": "e4040317-385e-40d7-c440-2a1706038fcd"
+        "outputId": "0bc4b538-5fda-4d41-f745-9e38153504bc"
       },
-      "execution_count": 56,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,23 +411,23 @@
             "16: Mısır\n",
             "\n",
             "Pizza Seç (1-4): 1\n",
-            "Sos Seç(11-16) veya Bitti yaz ve bitir: 2\n",
-            "Seçilen sos listede yok.\n",
             "Sos Seç(11-16) veya Bitti yaz ve bitir: 12\n",
+            "Sos Seç(11-16) veya Bitti yaz ve bitir: 13\n",
+            "Sos Seç(11-16) veya Bitti yaz ve bitir: 14\n",
             "Sos Seç(11-16) veya Bitti yaz ve bitir: Bitti\n",
             "\n",
             "Seçilen Pizza: KlasikPizza\n",
             "\n",
-            "Seçilen Soslar: Mantar\n",
+            "Seçilen Soslar: Mantar, Peynir, Et\n",
             "\n",
             "Toplam Fiyat: $50.0\n",
             "\n",
             "İşleme devam etmek istiyor musunuz? (evet/hayır): evet\n",
             "Ödeme işlemleri için lütfen bilgileri giriniz.\n",
             "Kullanıcı adı: oktay\n",
-            "Kullanıcı ID: 123\n",
-            "Kart Numarası: 234\n",
-            "Parola: 12345\n",
+            "Kullanıcı ID: 1234\n",
+            "Kart Numarası: 123456\n",
+            "Parola: 2345\n",
             "\n",
             "İşlem Tamamlandı!\n"
           ]
